[package]
name = "rust-triangle"
version = "0.1.0"
authors = ["Sn0wB <pana.sonia@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.18.0"
vulkano-shaders = "0.18.0"
vulkano-win = "0.18.0"
winit = "0.22"